RESOLVED FIXED121945
Fix ordered comparison warnings in BitmapImage::drawPattern
https://bugs.webkit.org/show_bug.cgi?id=121945
Summary Fix ordered comparison warnings in BitmapImage::drawPattern
Seokju Kwon
Reported 2013-09-26 01:53:51 PDT
gcc 4.7 warns about the pointer to integer comparison. Debug build breaks on EFL. WebKit/Source/WebCore/platform/graphics/BitmapImage.cpp:509:9: error: ordered comparison of pointer with integer zero [-Werror=extra]
Attachments
Patch (1.40 KB, patch)
2013-09-26 01:56 PDT, Seokju Kwon
no flags
Seokju Kwon
Comment 1 2013-09-26 01:56:49 PDT
Seokju Kwon
Comment 2 2013-09-26 01:59:05 PDT
CCing gyuyoung
Darin Adler
Comment 3 2013-09-26 09:25:30 PDT
Comment on attachment 212676 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=212676&action=review > Source/WebCore/platform/graphics/BitmapImage.cpp:509 > + ASSERT(buffer.get()); ASSERT(buffer) should work without the get().
WebKit Commit Bot
Comment 4 2013-09-26 09:52:46 PDT
Comment on attachment 212676 [details] Patch Clearing flags on attachment: 212676 Committed r156465: <http://trac.webkit.org/changeset/156465>
WebKit Commit Bot
Comment 5 2013-09-26 09:52:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.