Fix ordered comparison warnings in BitmapImage::drawPattern https://bugs.webkit.org/show_bug.cgi?id=121945

Reviewed by Darin Adler.

No new tests, no behavior change.

* platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::drawPattern):


Canonical link: https://commits.webkit.org/139970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156465 268f45cc-cd09-0410-ab3c-d52691b4dbfc